--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -31,12 +31,16 @@
                 "python.analysis.autoImportCompletions": true,
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
                 "[python]": {
-                    "editor.defaultFormatter": "charliermarsh.ruff"
+                    "editor.defaultFormatter": null
                 }
             }
         }
     },
     "remoteUser": "vscode",
+    // Mount the host SSH directory for git and other SSH operations
+    "mounts": [
+        "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+    ],
     "features": {
         "ghcr.io/devcontainers-extra/features/apt-packages:1": {
             "packages": [
